cmake_minimum_required(VERSION 3.14)
project(qt_test)
set(CMAKE_AUTOMOC ON)
include(cmake/CPM.cmake)
find_package(Qt6 REQUIRED COMPONENTS Core WebSockets)
find_package(PkgConfig REQUIRED)
pkg_check_modules(FFTW3 REQUIRED fftw3)
add_executable(qt_test main.cc WebSocketManager.cc WebSocketServer.cc SignalManager.cc SignalConfig.cc SinGenerator.cc FFTGenerator.cc )
target_link_libraries(qt_test PRIVATE  Qt6::Core Qt6::WebSockets ${FFTW3_LIBRARIES})  