cmake_minimum_required(VERSION 3.14)
project(qt_test)
set(CMAKE_AUTOMOC ON)
include(cmake/CPM.cmake)
find_package(Qt6 REQUIRED COMPONENTS Core WebSockets)
find_package(PkgConfig REQUIRED) 
pkg_check_modules(FFTW3 REQUIRED fftw3)
# add_executable(qt_test main.cc WebSocketManager.cc WebSocketServer.cc SignalManager.cc ConfigManager.cc SinGenerator.cc FFTGenerator.cc )
add_executable(qt_test main.cc)
target_include_directories(qt_test PRIVATE /home/sgdsg/projects/lib_test)
target_link_libraries(qt_test PRIVATE dl Qt6::Core Qt6::WebSockets ${FFTW3_LIBRARIES})  